--- a/css/page.css
+++ b/css/page.css
@@ -514,6 +514,10 @@ a,a:active,a:visited { color: inherit;}
 
 .ampstart-byline time { font-style: normal; white-space: nowrap;}
 
+.bottom_audio{ max-width: 300px; margin: 0 auto; }
+.follow_usBox { width: 50px; z-index: 100; position: fixed; right: 10px; bottom: 40px; }
+.follow_usBox a{padding: 2px; display: block;}
+
 .amp-carousel-button-next { background-image: url('data:image/svg+xml;charset=utf-8,<svg width="18" height="18" viewBox="0 0 34 34" xmlns="http://www.w3.org/2000/svg"><title>Next</title><path d="M25.557 14.7L13.818 2.961 16.8 0l16.8 16.8-16.8 16.8-2.961-2.961L25.557 18.9H0v-4.2z" fill="#FFF" fill-rule="evenodd"/></svg>');}
 .amp-carousel-button-prev { background-image: url('data:image/svg+xml;charset=utf-8,<svg width="18" height="18" viewBox="0 0 34 34" xmlns="http://www.w3.org/2000/svg"><title>Previous</title><path d="M33.6 14.7H8.043L19.782 2.961 16.8 0 0 16.8l16.8 16.8 2.961-2.961L8.043 18.9H33.6z" fill="#FFF" fill-rule="evenodd"/></svg>');}
 .ampstart-dropdown { min-width: 200px;}
@@ -526,7 +530,7 @@ a,a:active,a:visited { color: inherit;}
 .absolute .ampstart-dropdown-items { z-index: 200;}
 .ampstart-dropdown-item { background-color: #fff; color: #fff; opacity: .9;}
 .ampstart-dropdown-item:active,.ampstart-dropdown-item:hover { opacity: 1;}
-.ampstart-footer { background-color: #fff; color: #000; padding-top: 3rem; padding-bottom: 5rem;}
+.ampstart-footer { background-color: #fff; color: #000; padding-top: 1rem; padding-bottom:3rem;}
 .ampstart-footer .ampstart-icon { fill: #000;}
 .ampstart-footer .ampstart-social-follow li:last-child { margin-right: 0;}
 .ampstart-image-fullpage-hero { color: #000;}
@@ -648,7 +652,7 @@ amp-carousel .ampstart-image-with-caption { margin-bottom: 0;}
 .ampstart-sidebar .ampstart-dropdown-item,.ampstart-sidebar .ampstart-dropdown header,.ampstart-sidebar .ampstart-faq-item { margin-bottom: 1.5rem;}
 .ampstart-article-summary header,.ampstart-image-fullpage-hero figcaption { background: #fff; opacity: .9;}
 .ampstart-image-fullpage-hero figcaption { margin: 1.5rem; top: auto;}
-.ampstart-fullpage-hero-heading { font-size: 2rem; line-height: 1.6; margin-bottom: 0;}
+.ampstart-fullpage-hero-heading { font-size: 2rem; line-height: 2.6rem; padding-bottom: 8px; margin-bottom: 0;}
 .ampstart-image-fullpage-hero { margin-bottom: 0;}
 .ampstart-image-fullpage-hero footer { position: static;}
 .ampstart-image-credit br { display: none;}
@@ -656,3 +660,5 @@ amp-carousel .ampstart-image-with-caption { margin-bottom: 0;}
 .ampstart-readmore { background: none; display: block; margin: 0; padding: .5rem 0 2rem;}
 .ampstart-readmore:after { content: " "; border: 2px solid #000; border-width: 0 2px 2px 0; bottom: 2rem; display: block; height: 10px; left: calc(50% - 5px); position: absolute; -webkit-transform: rotate(45deg); transform: rotate(45deg); width: 10px;}
 .ampstart-dropcap:first-letter { color: #000; font-size: 3.59375rem; font-weight: inherit; line-height: 1.14782;}
+
+.the_add_friend{ position: fixed; bottom: 35px; left:calc(50% - 62px); z-index: 150; }
