--- a/css/page.css
+++ b/css/page.css
@@ -662,4 +662,4 @@ amp-carousel .ampstart-image-with-caption { margin-bottom: 0;}
 .ampstart-dropcap:first-letter { color: #000; font-size: 3.59375rem; font-weight: inherit; line-height: 1.14782;}
 
 .the_add_friend{ position: fixed; bottom: 30px; left:calc(50% - 71.5px); z-index: 150; }
-.ad_320x480{ width: 320px; height: 480px; display: block; background-color: #888; }
+.ad_320x480{ width: 320px; height: 480px; display: block; background-color: #888; margin: 0 auto;}
