--- a/02/css/page.css
+++ b/02/css/page.css
@@ -663,4 +663,4 @@ amp-carousel .ampstart-image-with-caption { margin-bottom: 0;}
 .ampstart-dropcap:first-letter { color: #000; font-size: 3.59375rem; font-weight: inherit; line-height: 1.14782;}
 
 .the_add_friend{ position: fixed; bottom: 30px; left:calc(50% - 82px); z-index: 150; }
-.ad_320x480{ width: 320px; display: block; margin: 0 auto; text-align: center;}
+.ad_320x480{ width: 320px; display: block; margin: 0 auto; text-align: center; padding-bottom: 100px;}
