--- a/RH2/css/flexslider.css
+++ b/RH2/css/flexslider.css
@@ -78,9 +78,6 @@ html[xmlns] .flexslider .slides {
   border: 4px solid #fff;*/
   position: relative;
   zoom: 1;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
   -webkit-box-shadow: '' 0 1px 4px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: '' 0 1px 4px rgba(0, 0, 0, 0.2);
   -o-box-shadow: '' 0 1px 4px rgba(0, 0, 0, 0.2);
@@ -262,10 +259,10 @@ html[xmlns] .flexslider .slides {
 @media screen and (max-width: 860px) {
   .flex-direction-nav .flex-prev {
     opacity: 1;
-    left: 10px;
+    left: 3%;
   }
   .flex-direction-nav .flex-next {
     opacity: 1;
-    right: 10px;
+    right: 3%;
   }
 }
