--- a/RH2/css/style.css
+++ b/RH2/css/style.css
@@ -51,7 +51,7 @@ html, body{ height: 100%; }
 .main_contents{ width: 100%;}
 .main_contents .bannerBox{ min-height: 200px;}
 .main_contents .bannerBox .ContentsBox{ position: relative; height: 100%; }
-.main_contents .bannerBox .ContentsBox h3.banner_title{ width: 100%; position: absolute; top: 25%; z-index: 8; color: #fff; font-size:42px; font-weight: bold; text-align: left; text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);}
+.main_contents .bannerBox .ContentsBox h3.banner_title{ width: 100%; position: absolute; top: 33%; z-index: 8; color: #fff; font-size:42px; font-weight: bold; text-align: left; text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);}
 .main_contents .bannerBox .flexslider{ width: 100%; height: 560px; }
 .main_contents .bannerBox .flexslider ul li{ height: 560px; background-position: center center; background-repeat: no-repeat; background-size: cover; }
 .main_contents .bannerBox .flexslider .flex-control-nav{ bottom: 5%; }
@@ -109,7 +109,7 @@ line-height: 0px; _border-color: #ffffff #000000 #000000 #000000; _filter: progi
 .FooterBox ul.sub_menu li p a{ color: #fff; line-height: 30px; }
 .FooterBox ul.sub_menu li p a:hover{color: #00acdb;}
 .FooterBox .copyrightBox{ border-top: 1px solid #fff; padding:15px 0 5px 0;}
-.FooterBox .copyrightBox p{ float: left; color: #fff; font-size: 12px; padding-top: 10px; }
+.FooterBox .copyrightBox p{ float: left; color: #fff; font-size: 12px; padding-top: 10px; letter-spacing: 1px; }
 .FooterBox .copyrightBox ul.social_media{ float: right; text-align: right; }
 .FooterBox .copyrightBox ul.social_media li{ display: inline-block; margin: 0 5px; }
 .FooterBox .copyrightBox ul.social_media li a{ width: 30px; height: 30px; display: block; background-size: contain; background-repeat: no-repeat; background-position: center center; }
@@ -124,7 +124,7 @@ line-height: 0px; _border-color: #ffffff #000000 #000000 #000000; _filter: progi
 	.HeaderBox .logoBox h1 a{ width: 260px; height: 86px;}
 	.HeaderBox nav ul.main_menu li h3 a{ min-width: 130px; }
 	.main_contents .bannerBox .ContentsBox{width: 90%;}
-	.main_contents .bannerBox .ContentsBox h3.banner_title{ font-size: 40px; }
+	.main_contents .bannerBox .ContentsBox h3.banner_title{ font-size: 40px; top: 25%; }
 	.main_contents .bannerBox .flexslider , .main_contents .bannerBox .flexslider ul li{ height: 480px; }
 	.company_info .ContentsBox{ padding: 30px 0 40px 0;}
 	.company_info h2.main_title{ font-size: 36px; padding:10px 0 25px 0;}
@@ -142,7 +142,7 @@ line-height: 0px; _border-color: #ffffff #000000 #000000 #000000; _filter: progi
 	.main_contents .bannerBox .ContentsBox h3.banner_title{ font-size: 38px; }
 	.main_contents .bannerBox .flexslider , .main_contents .bannerBox .flexslider ul li{ height: 380px; }
 	.company_info h2.main_title{ font-size: 32px; padding:5px 0 18px 0;}
-	.company_info p.p_info{ font-size: 15px; line-height: 24px; }
+	
 	.imgBox img{ max-width: 500px; }
 	.purpose ul.vision li{ width: 100%; float: none; max-width: 600px; }
 	.FooterBox{padding-top: 50px;}
@@ -153,10 +153,21 @@ line-height: 0px; _border-color: #ffffff #000000 #000000 #000000; _filter: progi
 	.HeaderBox{ border-bottom: 5px solid #00ACDB; }
 	.HeaderBox .logoBox h1 a{ width: 160px; height: 53px;}
 	.HeaderBox .menuBox{display: none;}
+	.company_info p.p_info{ font-size: 15px; line-height: 24px; }
 	.FooterBox ul.info{padding: 90px 0 0 0;}
 	.FooterBox ul.sub_menu{ text-align: left; padding-top: 30px;}
 	.FooterBox ul.sub_menu li{ margin-left: 0; }
 	.FooterBox ul.sub_menu li p{ font-size: 14px; }
 	.FooterBox .copyrightBox p{font-size: 13px;}
 }
-
+@media (max-width:700px){
+	.main_contents .bannerBox .ContentsBox{ width: 100%;}
+	.main_contents .bannerBox .flexslider .flex-direction-nav a{ top: 78%; }
+	.flex-direction-nav a:before{ color: #fff !important;}
+	.main_contents .bannerBox .ContentsBox h3.banner_title{ font-size: 30px; text-align: center; top: initial; background-color: rgba(0,0,0,.4); bottom: 0; left: 0; padding: 4% 12% 10% 12%;}
+}
+@media (max-width:450px){
+	.company_info h2.main_title{ font-size: 30px; padding-bottom: 10px; }
+	.main_contents .bannerBox .ContentsBox h3.banner_title{ font-size: 26px; padding-bottom: 15%; }
+	.main_contents .bannerBox .flexslider, .main_contents .bannerBox .flexslider ul li {height: 300px;}
+}
