--- a/RH2/css/style.css
+++ b/RH2/css/style.css
@@ -62,11 +62,15 @@ html, body{ height: 100%; }
 line-height: 0px; _border-color: #ffffff #000000 #000000 #000000; _filter: progid:DXImageTransform.Microsoft.Chroma(color='#000000'); }
 .company_info .ContentsBox{padding: 60px 0 85px 0;}
 .company_info h2.main_title{ font-size: 34px; color: #333; text-align: center; font-weight: bold; padding:15px 0;}
-.company_info h4.sub_title{ font-size: 16px; text-align: center; padding-bottom: 20px; margin-bottom: 20px; color: #a4a4a4;  border-bottom: 1px solid #b3b3b3; }
+.company_info h4.sub_title{ font-size: 16px; text-align: center; padding-bottom: 20px; margin-bottom: 30px; color: #a4a4a4;  border-bottom: 1px solid #b3b3b3; }
 .company_info p.p_info{ font-size: 18px; line-height: 36px; text-align: justify; }
 .company_info p.p_info span.blue_line{ position: relative; padding-left: 2em; display: block; }
 .company_info p.p_info span.blue_line::after{ content: ""; position: absolute; top: 0; left:0; width: 3px; height:100%; display: block; background-color: #00acdb;}
+.company_info p.p20{ font-size: 20px; color: #00467F; text-align: center; padding: 0 25px; }
 .company_info p.h24{ line-height: 26px; }
+.company_info .bg-k{ background-color: rgba(0,0,0,.6); max-width: 640px; }
+.company_info .bg-k p.p20{ font-size: 18px; line-height: 30px; text-align: justify; padding: 0 35px; }
+.company_info .bg-k h4.sub_title{ margin: 0 30px 30px 30px; }
 
 .imgBox{ text-align: center; }
 .imgBox img{ max-width: 706px; display: inline-block; }
@@ -77,9 +81,8 @@ line-height: 0px; _border-color: #ffffff #000000 #000000 #000000; _filter: progi
 
 .purpose{ background: url(../images/bg_home_vision.png) center center no-repeat; background-size: cover; background-attachment: fixed; }
 .purpose ul.vision{ width:100%; padding: 30px 0;}
-.purpose ul.vision li{ float: left; width:calc(33.33% - 20px); position: relative; /*min-height: 550px;*/ padding: 25px; margin: 0 10px; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; /*background-color: rgba(256, 256, 256, .92);*/ /*border-radius: 8px; box-shadow: 0 3px 10px rgba(0,0,0,.2);*/}
+.purpose ul.vision li{ float: left; width:calc(33.33% - 20px); position: relative; padding: 25px; margin: 0 10px; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; /*background-color: rgba(256, 256, 256, .92);*/ /*border-radius: 8px; box-shadow: 0 3px 10px rgba(0,0,0,.2);*/}
 .purpose ul.vision li::after{ position: absolute; }
-/*.purpose ul.vision li:hover{ background-color: #fff; }*/
 .purpose ul.vision li h4{ font-size: 22px; text-align: center; padding: 10px 0 20px; position: relative; padding-top: 175px; color: #fff; }
 .purpose ul.vision li h4::before{ content: ""; width: 150px; height: 150px; transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms; display: block; position: absolute; top: 0; left: calc(50% - 75px); background-size: 80%; background-repeat: no-repeat; background-position: center center; border-radius: 50%;  background-color: #fff; }
 .purpose ul.vision li h4.icon_01::before{ background-image: url(../images/vision_icon_01.png); }
@@ -88,10 +91,46 @@ line-height: 0px; _border-color: #ffffff #000000 #000000 #000000; _filter: progi
 .purpose ul.vision li:hover h4::before{ background-size: 100%;}
 
 .purpose ul.vision li p.p_info{ font-size: 14px; line-height: 24px; }
+.align_flex{display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center;}
+.service{ background: url(../images/products/inside_service.jpg) center center no-repeat; background-size: cover; background-attachment: fixed; height:100vh; min-height: 350px; }
+.patent{ background: url(../images/products/inside_patent.jpg) center right no-repeat; background-size: cover; background-attachment: fixed; height:100vh; min-height: 350px; }
+.patent .bg-k{ background-color: rgba(0,96,139,.9); }
+.bg_gray{ background-color: #F1F1F1; }
 
 .f_color_w h2.main_title{ color: #fff; text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);}
 .f_color_w p.p_info{ color: #fff; text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);}
 .f_color_w h4.sub_title{ color: #fff; text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3); border-color: #fff;}
+.f_color_w p.p20{ color: #fff; text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);}
+
+.f_color_blue h2.main_title{ color: #00467F; }
+.f_color_blue p.p_info{ color: #00467F; font-size: 28px; text-align: center; }
+.f_color_blue h4.sub_title{ color: #00467F ; border:none;}
+
+.product{ background: url(../images/products/inside_product.jpg) center center no-repeat; background-size: cover; background-attachment: fixed; min-height: 350px; }
+.product h4.sub_title{ margin-bottom: 0; }
+.product_list{ width: 100%; }
+.product_list ul{ width: 100%; }
+.product_list ul li{ width: 100%; padding: 40px 0; border-bottom: 1px dashed #e7e7e7; }
+.product_list ul li:last-child{ border: none; }
+.product_list ul li .photo{ float: left; width: 250px; height: 214px; display: block; background-repeat: no-repeat; background-position: center top; background-size: contain; }
+.product_list ul li .p_01{ background-image: url(../images/products/pic_product_temperature_patch.png); }
+.product_list ul li .p_02{ background-image: url(../images/products/pic_product_glucose_patch.png); }
+
+.product_list ul li .info{ width: calc( 100% - 250px) ; padding-left: 50px; float: left;}
+.product_list ul li .info h3{ color: #00467F; padding-bottom: 15px; font-size: 18px;}
+.product_list ul li .info p{ text-align: justify; line-height: 28px; }
+.product_list ul li .info p span{ color: #5191b9; }
+
+.news{ background: url(../images/banner/inside_news.jpg) center center no-repeat; background-size: cover; background-attachment: fixed; min-height: 350px; }
+.news h4.sub_title{ border: none; margin-bottom: 0;}
+.newsBox .photo{ padding: 15px 0; }
+.newsBox ul li{ width: 100%; padding: 20px 0; border-bottom: 1px dashed #e7e7e7;}
+.newsBox ul li p{ line-height: 26px; text-align: justify; }
+.newsBox ul li p.day{ float: left; width: 120px; color: #00abdd; padding-bottom: 15px; font-size: 17px; }
+.newsBox ul li .new_info{ width: calc(100% - 120px); float: left; }
+.newsBox ul li:hover .new_info p{ color: #00467F; } 
+.newsBox h2.new_main_title {font-size: 28px; text-align: left; font-weight: bold; padding-bottom: 20px;}
+
 /*FooterBox*/
 .FooterBox{ width: 100%; background-color: #494949; padding:75px 0 50px 0;border-top: 4px solid #00acdb;}
 .FooterBox ul.info{ position: relative; padding:5px 0px 40px calc(100% - 550px); }
@@ -129,6 +168,7 @@ line-height: 0px; _border-color: #ffffff #000000 #000000 #000000; _filter: progi
 	.company_info .ContentsBox{ padding: 30px 0 40px 0;}
 	.company_info h2.main_title{ font-size: 36px; padding:10px 0 25px 0;}
 	.company_info p.p_info{ font-size: 16px; line-height: 28px; }
+	.newsBox h2.main_title {font-size: 26px;}
 	.purpose ul.vision li{  min-height: initial; margin:0 auto 18px auto;}
 	.purpose ul.vision li h4{ font-size: 26px; }
 	.FooterBox ul.info{ position: relative; padding:5px 0px 40px calc(100% - 400px); }
@@ -165,9 +205,20 @@ line-height: 0px; _border-color: #ffffff #000000 #000000 #000000; _filter: progi
 	.main_contents .bannerBox .flexslider .flex-direction-nav a{ top: 78%; }
 	.flex-direction-nav a:before{ color: #fff !important;}
 	.main_contents .bannerBox .ContentsBox h3.banner_title{ font-size: 30px; text-align: center; top: initial; background-color: rgba(0,0,0,.4); bottom: 0; left: 0; padding: 4% 12% 10% 12%;}
+
+	.product_list ul li .photo{ float: none; margin: 0 auto 30px auto;}
+	.product_list ul li .info{ width: calc(100% - 150px); float: none; padding: 0; margin: 0 auto; }
+}
+@media (max-width:600px){
+	.product_list ul li .info{ width: calc(100% - 50px);}
+	.newsBox ul li p.day, .newsBox ul li .new_info{ width: 100%; }
 }
 @media (max-width:450px){
 	.company_info h2.main_title{ font-size: 30px; padding-bottom: 10px; }
 	.main_contents .bannerBox .ContentsBox h3.banner_title{ font-size: 26px; padding-bottom: 15%; }
 	.main_contents .bannerBox .flexslider, .main_contents .bannerBox .flexslider ul li {height: 300px;}
+}
+
+@media (max-device-width:1200px) {
+	.purpose, .service, .patent{ background-attachment: initial; }
 }
