--- a/RH2/css/style.css
+++ b/RH2/css/style.css
@@ -117,12 +117,13 @@ line-height: 0px; _border-color: #ffffff #000000 #000000 #000000; _filter: progi
 .product_list ul li .p_02{ background-image: url(../images/products/pic_product_glucose_patch.png); }
 
 .product_list ul li .info{ width: calc( 100% - 250px) ; padding-left: 50px; float: left;}
-.product_list ul li .info h3{ color: #00467F; padding-bottom: 15px; font-size: 18px;}
+.product_list ul li .info h3, .recruitBox .both h3{ color: #00467F; padding-bottom: 15px; font-size: 20px; font-weight: bold;}
 .product_list ul li .info p{ text-align: justify; line-height: 28px; }
 .product_list ul li .info p span{ color: #5191b9; }
 
+.join{ background: url(../images/banner/inside_contact.jpg) center center no-repeat; background-size: cover; background-attachment: fixed; min-height: 350px; }
 .news{ background: url(../images/banner/inside_news.jpg) center center no-repeat; background-size: cover; background-attachment: fixed; min-height: 350px; }
-.news h4.sub_title{ border: none; margin-bottom: 0;}
+.news h4.sub_title, .join h4.sub_title{ border: none; margin-bottom: 0;}
 .newsBox .photo{ padding: 15px 0; }
 .newsBox ul li{ width: 100%; padding: 20px 0; border-bottom: 1px dashed #e7e7e7;}
 .newsBox ul li p{ line-height: 26px; text-align: justify; }
@@ -130,6 +131,30 @@ line-height: 0px; _border-color: #ffffff #000000 #000000 #000000; _filter: progi
 .newsBox ul li .new_info{ width: calc(100% - 120px); float: left; }
 .newsBox ul li:hover .new_info p{ color: #00467F; } 
 .newsBox h2.new_main_title {font-size: 28px; text-align: left; font-weight: bold; padding-bottom: 20px;}
+
+.recruitBox p.p_info{ padding: 30px 0; }
+.recruit_list{ width: 100%; padding: 30px 0 10px 0;}
+.recruit_list .both{ width: 50%; float: left;  position: relative; padding-left: 110px;}
+.recruit_list .both::before{ content: ""; position: absolute; width: 90px; height: 90px; display: block; border-radius: 50%; top: 0; left: 0; background-repeat: no-repeat; background-size: contain; background-position: center center; background-color: #F1F1F1;}
+.recruit_list .both:first-child::before{ background-image: url(../images/ic_contact_rd.png); }
+.recruit_list .both:last-child::before{ background-image: url(../images/ic_contact_medical_regulations.png); }
+.recruit_list .both ul{ list-style-type: decimal; padding-left: 20px; }
+.recruit_list .both ul li{padding-bottom: 10px;}
+
+.contact_us{background: url(../images/pic_contact_earth.png) center center no-repeat #F1F1F1; background-size: contain; }
+.contact_us p.p_info{ text-align: center; }
+.contact_us ul{ width: 100%; padding: 30px 0; max-width: 800px; margin:  0 auto; }
+.contact_us ul li{margin: 30px 0; background-color: #fff; padding:15px 20px; box-shadow: 0 0 10px rgba(0,0,0,.1);}
+.contact_us ul li p{ font-size: 18px; color: #00467F; padding-left: 48px; position: relative;}
+.contact_us ul li p::after{ content: ""; top:calc(50% - 16px); left: 0; position: absolute; width: 28px; height: 32px; display:  block; background-size: contain; background-repeat: no-repeat; background-position: center center; }
+.contact_us ul li p a{color: #00467F;}
+.contact_us ul li p a:hover{ text-decoration: underline; }
+.contact_us ul li p.add::after{ background-image: url(../images/contact_icon_map.png); }
+.contact_us ul li p.phone::after{ background-image: url(../images/contact_icon_phone.png); }
+.contact_us ul li p.mail::after{ background-image: url(../images/contact_icon_mail.png); }
+
+.google_map{ width: 100%; border-top: 4px solid #fff; }
+.google_map iframe{ width: 100%; height: 500px; }
 
 /*FooterBox*/
 .FooterBox{ width: 100%; background-color: #494949; padding:75px 0 50px 0;border-top: 4px solid #00acdb;}
@@ -182,7 +207,6 @@ line-height: 0px; _border-color: #ffffff #000000 #000000 #000000; _filter: progi
 	.main_contents .bannerBox .ContentsBox h3.banner_title{ font-size: 38px; }
 	.main_contents .bannerBox .flexslider , .main_contents .bannerBox .flexslider ul li{ height: 380px; }
 	.company_info h2.main_title{ font-size: 32px; padding:5px 0 18px 0;}
-	
 	.imgBox img{ max-width: 500px; }
 	.purpose ul.vision li{ width: 100%; float: none; max-width: 600px; }
 	.FooterBox{padding-top: 50px;}
@@ -208,17 +232,26 @@ line-height: 0px; _border-color: #ffffff #000000 #000000 #000000; _filter: progi
 
 	.product_list ul li .photo{ float: none; margin: 0 auto 30px auto;}
 	.product_list ul li .info{ width: calc(100% - 150px); float: none; padding: 0; margin: 0 auto; }
+	.contact_us ul li p{ font-size: 16px; }
+	.recruit_list .both{ width: 100%; padding-bottom: 40px; }
+	.contact_us ul{padding: 0;}
+	.contact_us ul li{margin: 20px 0;}
+	.google_map iframe{ height: 400px; }
 }
 @media (max-width:600px){
 	.product_list ul li .info{ width: calc(100% - 50px);}
+	.newsBox .ContentsBox{ width: 80%; }
+	.newsBox h2.new_main_title{ text-align: center; }
 	.newsBox ul li p.day, .newsBox ul li .new_info{ width: 100%; }
+	.google_map iframe{ height: 300px; }
 }
 @media (max-width:450px){
 	.company_info h2.main_title{ font-size: 30px; padding-bottom: 10px; }
 	.main_contents .bannerBox .ContentsBox h3.banner_title{ font-size: 26px; padding-bottom: 15%; }
 	.main_contents .bannerBox .flexslider, .main_contents .bannerBox .flexslider ul li {height: 300px;}
+	.google_map iframe{ height: 250px; }
 }
 
 @media (max-device-width:1200px) {
-	.purpose, .service, .patent{ background-attachment: initial; }
+	.purpose, .service, .patent, .join, .news{ background-attachment: initial; }
 }
