--- a/WS/css/style.css
+++ b/WS/css/style.css
@@ -274,6 +274,9 @@ p.btn_more a{padding: 12px 40px 12px 25px;  max-width: 150px; color: #f4b4cf; di
 .foodinfo .infoBox p.p_color_01 {color: #fdbf33; font-weight: bold; padding-bottom: 10px; }
 .foodinfo .infoBox .youtubeBox{ width:100%; max-width: 900px; padding-bottom: 50px; margin: 0 auto; }
 .foodinfo .infoBox .youtubeBox iframe{ width:calc(100% - 16px); height: 440px; border: 8px solid transparent; -moz-border-image:url(../images/br_gold.jpg) 30 30 round; -webkit-border-image:url(../images/br_gold.jpg) 30 30 round; -o-border-image:url(../images/br_gold.jpg) 30 30 round; border-image:url(../images/br_gold.jpg) 30 30 round; }
+.foodinfo .infoBox .youtubeBox span.no{ display: none; }
+.foodinfo .infoBox .youtubeBox span.b{display: block;}
+
 .forMob_youtube iframe{ width: 100%; height: 440px;}
 .forMob_youtube{ display: none;}
 
@@ -457,7 +460,10 @@ a.line:hover{ background: #03d63c;  }
 	.foodinfo .aBox .photo .pBox h4.tilte{ width: 100px; }
 	.foodinfo .r02 .photo .pBox h4.tilte{ left: -30px; top: -15px;}
 }
-
 @media (max-width:420px){
   .foodinfo .infoBox .youtubeBox iframe, .forMob_youtube iframe{ height: 200px; }
+}
+@media (max-width:400px){
+  .foodinfo .infoBox .youtubeBox span.no{ display: inline-block; }
+  .foodinfo .infoBox .youtubeBox span.b{display: initial;}
 }
