--- a/WS/css/style.css
+++ b/WS/css/style.css
@@ -62,13 +62,10 @@ h1.KV_title{ position: absolute; z-index: 20; left:4vw; top: 14vh; width: 250px;
 
 .slider-container p.btn{ width: 100px; position: fixed; top: 5vh; right: 2%; z-index: 16; text-align:  center; font-size: 18px; margin: 0 auto;}
 .slider-container p.btn a{ color: #fff; display: inline-block; text-align:  center; width: 90px; height: 90px; background-color: rgba(0,0,0,.6);  border-radius: 50%; margin: 10px 0; cursor: pointer; display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center;}
-/*.slider-container p.btn a:nth-child(1){ background: url(../images/bg_flower_01.png) center center no-repeat; background-size: contain;}
-.slider-container p.btn a:nth-child(2){ background: url(../images/bg_flower_02.png) center center no-repeat; background-size: contain;}
-*/
 .slider-container p.btn a:hover{ color: #fff; background-color: #e60013;}
 
 .DataBox{ width: 100%;position: relative; }
-.DataBox .box_title{ width: 100%; background-color: #e8bf62; /*background: url(../images/flower_01_br.png) center top no-repeat;*//* padding: 32px 0 34px 0;*/}
+.DataBox .box_title{ width: 100%; background-color: #e8bf62;}
 .DataBox .box_title h3{ width: 100%; max-width:600px; height:98px; position: relative; display: block; background-position:  center center; background-repeat: no-repeat; margin: 0 auto ; text-indent: -9999px; }
 .DataBox .box_title h3::after{ content: ""; top:20px; z-index: 50; left: 0; position: absolute; width: 130px; height: 90px; display: block; background: url(../images/bg_flower_03.png) center center no-repeat; background-size: contain; }
 .DataBox .box_title h3.t02{ background-image: url(../images/h3_title_02.png );  background-size: 64%;}
@@ -354,7 +351,7 @@ a.line:hover{ background: #03d63c;  }
 }
 
 @media (max-device-width:1200px) {
-	.mediaBox, .foodinfo{ background-attachment: inherit;}
+	.mediaBox, .foodinfo{ background-attachment: inherit; background: url(../images/top_bg_00_s.jpg) center center no-repeat; background-size: cover;}
 }
 @media (min-width:1200px) and (max-height:700px) {
 	h1.KV_title{height: 520px;}
@@ -387,8 +384,7 @@ a.line:hover{ background: #03d63c;  }
 }
 @media (max-width:800px){
 	.DataBox .box_title p.t01{ width:75%; }
-	.mediaBox ul.MBox li{ width: 50%; }
-
+	.mediaBox ul.MBox li{ padding: 10px 1%;}
 }
 @media (max-width:750px){
   .foodinfo .infoBox .box_for2 .infoBoxleft, .foodinfo .infoBox .box_for2 .infoBoxright{width: 100%;}
@@ -402,6 +398,7 @@ a.line:hover{ background: #03d63c;  }
   .fb_share_button{width: initial; max-width: initial; text-align: center;}
   .fb_share_button a{ display: inline-block; float: none; }
   a.fbButtom{margin: 10px auto;}
+  .mediaBox ul.MBox li{ width: 100%; padding: 0; }
 }
 @media (max-width:700px){
 	.map .mBox .lBox, .map .mBox .rBox{ width: 100%; float: none;}
@@ -413,6 +410,7 @@ a.line:hover{ background: #03d63c;  }
   .foodinfo .infoBox{ max-width: 100%; padding: 150px 0 0 0; }
   .foodinfo .infoBox .box_for2{ max-width: 86%; }
   .foodinfo .infoBox .box_for2::before{ width: 180px; height: 120px;}
+  .flower_02{ bottom: 2vh; width: 100px; height: 100px; }
 }
 @media (max-width:650px){
   .foodinfo .infoBox .box_for2{ width: 100%; }
@@ -447,7 +445,8 @@ a.line:hover{ background: #03d63c;  }
   .sub_box_title span.b{ display: initial; }
 }
 @media (max-width:499px){
-	.DataBox .p_subtitle p, .DataBox .sub_box_title p{font-size: 15px; line-height: 26px; width: 94%;}
+	.DataBox .p_subtitle p, .DataBox .sub_box_title p{font-size: 15px; line-height: 26px; width:calc(100% - 90px);}
+  .footerBox .infoBox{ max-width: calc(100% - 90px);}
 	.map p.btn_more a {padding: 10px 20px;}
 	.PreferentialBox p.ex{ width: 80%; text-align: justify; margin: 0 auto; }
 	.foodinfo .aBox .info p{ font-size: 15px; line-height: 28px; }
