--- a/WS/css/style.css
+++ b/WS/css/style.css
@@ -351,7 +351,7 @@ a.line:hover{ background: #03d63c;  }
 }
 
 @media (max-device-width:1200px) {
-	.mediaBox, .foodinfo{ background-attachment: inherit; background: url(../images/top_bg_00_s.jpg) center center no-repeat; background-size: cover;}
+	.mediaBox, .foodinfo, .br00{ background-attachment: inherit; background: url(../images/top_bg_00_s.jpg) center center no-repeat; background-size: cover;}
 }
 @media (min-width:1200px) and (max-height:700px) {
 	h1.KV_title{height: 520px;}
@@ -446,7 +446,7 @@ a.line:hover{ background: #03d63c;  }
 }
 @media (max-width:499px){
 	.DataBox .p_subtitle p, .DataBox .sub_box_title p{font-size: 15px; line-height: 26px; width:calc(100% - 90px);}
-  .footerBox .infoBox{ max-width: calc(100% - 90px);}
+  .footerBox .infoBox{ max-width: calc(100% - 45px);}
 	.map p.btn_more a {padding: 10px 20px;}
 	.PreferentialBox p.ex{ width: 80%; text-align: justify; margin: 0 auto; }
 	.foodinfo .aBox .info p{ font-size: 15px; line-height: 28px; }
