--- a/RH2/css/style.css
+++ b/RH2/css/style.css
@@ -62,6 +62,7 @@ html, body{ height: 100%; }
 line-height: 0px; _border-color: #ffffff #000000 #000000 #000000; _filter: progid:DXImageTransform.Microsoft.Chroma(color='#000000'); }
 .company_info .ContentsBox{padding: 60px 0 85px 0;}
 .company_info h2.main_title{ font-size: 34px; color: #333; text-align: center; font-weight: bold; padding:15px 0; border-bottom: 1px solid #b3b3b3; margin-bottom: 30px;  }
+.company_info h2.no_line{ border: none; margin-bottom: 0; }
 /*.company_info h4.sub_title{ font-size: 16px; text-align: center; padding-bottom: 20px;color: #a4a4a4; }*/
 .company_info p.p_info{ font-size: 18px; line-height: 36px; text-align: justify; }
 .company_info p.p_info span.blue_line{ position: relative; padding-left: 2em; display: block; }
@@ -91,6 +92,8 @@ line-height: 0px; _border-color: #ffffff #000000 #000000 #000000; _filter: progi
 .purpose ul.vision li:hover h4::before{ background-size: 100%;}
 
 .purpose ul.vision li p.p_info{ font-size: 14px; line-height: 24px; }
+.purpose ul.vision li p.p_en{ text-align: left; }
+
 .align_flex{display: -webkit-flex; display: flex; -webkit-align-items: center; align-items: center; -webkit-justify-content: center; justify-content: center;}
 .service{ background: url(../images/products/inside_service.jpg) center center no-repeat; background-size: cover; background-attachment: fixed; height:100vh; min-height: 350px; }
 .patent{ background: url(../images/products/inside_patent.jpg) center right no-repeat; background-size: cover; background-attachment: fixed; height:100vh; min-height: 350px; }
