--- a/C/css/product.css
+++ b/C/css/product.css
@@ -153,32 +153,35 @@ body#product #wrapper .content .txt_4 .color123{
 	line-height: 200%;
 	}
 
-body#product #wrapper .content .txt_4 .color123 .color_line{
+body#product #wrapper .content .color123 .color_line{
 	width:400px;
-	height:155px;
+	min-height:170px;
 }
 
-body#product #wrapper .content .txt_4 .color123 .color_line .product_imgsin{
+body#product #wrapper .content #product2 .color123 .color_line{ min-height: initial; display:inline-block; padding: 15px 0 0 0;}
+body#product #wrapper .content .color123 .color_line .product_imgsin{
 	float:left;
 	width:103px;
-	height:138px;
+	min-height:138px;
 	padding-right:10px;
 	text-align:center;
+	display: block;
 }
-body#product #wrapper .content .txt_4 .color123 .color_line .product_imgsin .product_img{
+body#product #wrapper .content .color123 .color_line .product_imgsin .product_img{
 	width:103px;
 	height:103px;
 	cursor: pointer;
 }
-body#product #wrapper .content .txt_4 .color123 .color_line .product_imgsin .product_txt{
+body#product #wrapper .content .color123 .color_line .product_imgsin .product_txt{
 	font-size:13px;
 	line-height:20px;
 	color:#fff;
 	width:103px;
-	height:20px;
+	min-height:20px;
 	text-align:center;
+	display: inline-block;
 }
-body#product #wrapper .content .txt_4 .color123 .color_line .product_imgsin .product_num{
+body#product #wrapper .content .color123 .color_line .product_imgsin .product_num{
 	font-size:10px;
 	line-height:15px;
 	display:inline;
@@ -186,7 +189,8 @@ body#product #wrapper .content .txt_4 .color123 .color_line .product_imgsin .pro
 	border:1px solid #CCC;
 	color:#ccc;
 }
-
+body#product #wrapper .content .txt_3 .color123 .color_line{ height: inherit; padding: 15px 0; }
+body#product #wrapper .content .txt_3 .color123 .color_line .product_imgsin{ min-height: 110px; }
 
 
 /*  以上是新的code  */
@@ -302,22 +306,25 @@ body#product  #wrapper .content .txt_5{
 body#product  #wrapper .content .txt_5 h2{
 	font-size: 16px;
 	word-spacing:400%;
-	color: #bcbcbc;
+	color: #ffffff;
 	line-height: 220%;
 	text-align: justify;
 	letter-spacing: 1px;
 	padding-bottom: 10px;
+	text-indent: 0;
 	}
 	
 	body#product  #wrapper .content .txt_5 h3{
 	font-size:16px;
 	word-spacing:400%;
-	color:#bcbcbc;
+	color:#ffffff;
 	text-align:justify;
 	letter-spacing:1px;
 	font-weight: 900;
-	
-	
+	text-indent: 0;
+	}
+	body#product  #wrapper .content .txt_3 p.no_t, body#product  #wrapper .content .txt_5 p.no_t{
+		text-indent: 0;
 	}
 
 
@@ -374,21 +381,21 @@ body#product .product_sub_nav{
 	z-index: 5505;
 }
 body#product .product_sub_nav li{ float:left; text-indent:-9999px;}
-body#product .product_sub_nav a{ display:block; width:34.5px; background:url(../images/product/btn.png) no-repeat;}
-body#product .product_sub_nav li.nav1 a{ width:34.5px; height:114px; position:absolute; top:0px; background-position:0px 0px;}
-body#product .product_sub_nav li.nav1 a:hover{background-position:-35px 0px;}
+body#product .product_sub_nav a{ width:34.5px; color: #000;/* font-weight: bold; font-size: 16px; text-decoration: none; text-align: center;*/ display:block; width:34.5px; background:url(../images/product/btn.png) no-repeat;}
+body#product .product_sub_nav li.nav1 a{ height:114px; position:absolute; top:0px; background-position:0px -464px;}
+body#product .product_sub_nav li.nav1 a:hover{background-position:-35px -464px;}
 
-body#product .product_sub_nav li.nav2 a{ width:34.5px; height:117px; position:absolute; top:114px; background-position:0px -114px;}
-body#product .product_sub_nav li.nav2 a:hover{background-position:-35px -114px;}
+body#product .product_sub_nav li.nav2 a{ height:117px; position:absolute; top:114px; background-position:0px -232px;}
+body#product .product_sub_nav li.nav2 a:hover{background-position:-35px -232px;}
 
-body#product .product_sub_nav li.nav3 a{ width:34.5px; height:115px; position:absolute; top:231px; background-position:0px -232px;}
-body#product .product_sub_nav li.nav3 a:hover{background-position:-35px -232px;}
+body#product .product_sub_nav li.nav3 a{ height:115px; position:absolute; top:231px; background-position:0px -347.5px;}
+body#product .product_sub_nav li.nav3 a:hover{background-position:-35px -347.5px;}
 
-body#product .product_sub_nav li.nav4 a{ width:34.5px; height:118px; position:absolute; top:346px; background-position:0px -347.5px;}
-body#product .product_sub_nav li.nav4 a:hover{background-position:-35px -347.5px;}
+body#product .product_sub_nav li.nav4 a{ height:118px; position:absolute; top:346px; background-position:0px -114px;}
+body#product .product_sub_nav li.nav4 a:hover{background-position:-35px -114px;}
 
-body#product .product_sub_nav li.nav5 a{ width:34.5px; height:118px; position:absolute; top:464px; background-position:0px -464px;}
-body#product .product_sub_nav li.nav5 a:hover{background-position:-35px -464px;}
+body#product .product_sub_nav li.nav5 a{ height:118px; position:absolute; top:464px; background-position:0px 5px;}
+body#product .product_sub_nav li.nav5 a:hover{background-position:-35px 5px;}
 
 
 
