--- a/C/css/contact.css
+++ b/C/css/contact.css
@@ -84,7 +84,7 @@ body#contact #wrapper .contact .title2{
 	line-height:180%;
 	width:400px;
 	display:block;
-	padding: 0 0px 0 30px;
+	padding: 0 0px 100px 30px;
 }
 #contact #wrapper .contact .form .title1 {
 	width: 60px;
